--- a/public/about/index.html
+++ b/public/about/index.html
@@ -46,17 +46,17 @@ HA盒子，找我就行，包您满意，诚信经营。
     <link href="../about/index.xml" rel="alternate" type="application/rss+xml" title="5 关于我们 :: HaBox 技术支持站">
     <link href="../about/index.print.html" rel="alternate" type="text/html" title="5 关于我们 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1738589994" rel="stylesheet">
-    <link href="../css/auto-complete.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1738589994" rel="stylesheet">
-    <link href="../css/fonts.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1738589994" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1738589994" rel="stylesheet">
-    <link href="../css/print.css?1738589994" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1738589994"></script>
+    <link href="../css/fontawesome-all.min.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1738639342" rel="stylesheet">
+    <link href="../css/auto-complete.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1738639342" rel="stylesheet">
+    <link href="../css/fonts.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1738639342" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1738639342" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1738639342" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1738639342" rel="stylesheet">
+    <link href="../css/print.css?1738639342" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1738639342"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -143,11 +143,11 @@ HA盒子，找我就行，包您满意，诚信经营。
 <h2 id="联系我们"><strong>联系我们</strong></h2>
 <p>【闲鱼】<a href="https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE" rel="external" target="_self">https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE</a> MF1643 「这是我的闲鱼号，快来看看吧～」
 点击链接直接打开</p>
-<p><a href="#R-image-03f3d4b0b85bf8c0a25af76c5db44d00" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-03f3d4b0b85bf8c0a25af76c5db44d00"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
+<p><a href="#R-image-a5572bf94823fedec61f710d7be17c2e" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5572bf94823fedec61f710d7be17c2e"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
 <p>QQ群</p>
-<p><a href="#R-image-36dd97e16ebf793e6b0d72332dc08f51" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-36dd97e16ebf793e6b0d72332dc08f51"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
+<p><a href="#R-image-6f0d07a3007cb95e52fb04abd1c55e7c" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6f0d07a3007cb95e52fb04abd1c55e7c"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -243,13 +243,13 @@ HA盒子，找我就行，包您满意，诚信经营。
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1738589994" defer></script>
-        <script src="../js/lunr/lunr.min.js?1738589994" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1738589994" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1738589994" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1738589994" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1738589994" defer></script>
-        <script src="../js/search.js?1738589994" defer></script>
+        <script src="../js/auto-complete.js?1738639342" defer></script>
+        <script src="../js/lunr/lunr.min.js?1738639342" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1738639342" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1738639342" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1738639342" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1738639342" defer></script>
+        <script src="../js/search.js?1738639342" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -263,6 +263,7 @@ HA盒子，找我就行，包您满意，诚信经营。
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/habox-over-greatwall/index.html" class=""><a class="padding" href="../installation/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/initialize-system/index.html" class=""><a class="padding" href="../installation/initialize-system/index.html">homeassistant初始化系统<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/hacs-china/index.html" class=""><a class="padding" href="../installation/hacs-china/index.html">Homeassistant盒子安装HACS极速版<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/free-remote-control/index.html" class=""><a class="padding" href="../installation/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -347,9 +348,9 @@ HA盒子，找我就行，包您满意，诚信经营。
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1738589994" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1738589994" defer></script>
-    <script src="../js/theme.js?1738589994" defer></script>
+    <script src="../js/clipboard.min.js?1738639342" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1738639342" defer></script>
+    <script src="../js/theme.js?1738639342" defer></script>
 
 
   </body>
