--- a/public/installation/initialize-system/index.print.html
+++ b/public/installation/initialize-system/index.print.html
@@ -43,18 +43,18 @@
     <link href="http://localhost:1313/installation/initialize-system/index.html" rel="canonical" type="text/html" title="homeassistant初始化系统 :: HaBox 技术支持站">
     <link href="../../installation/initialize-system/index.xml" rel="alternate" type="application/rss+xml" title="homeassistant初始化系统 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1738589994" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1738589994" rel="stylesheet">
-    <link href="../../css/fonts.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1738589994" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1738589994" rel="stylesheet">
-    <link href="../../css/print.css?1738589994" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1738589994" rel="stylesheet">
-    <script src="../../js/variant.js?1738589994"></script>
+    <link href="../../css/fontawesome-all.min.css?1738639343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1738639343" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1738639343" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1738639343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1738639343" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1738639343" rel="stylesheet">
+    <link href="../../css/fonts.css?1738639343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1738639343" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1738639343" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1738639343" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1738639343" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1738639343" rel="stylesheet">
+    <link href="../../css/print.css?1738639343" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1738639343" rel="stylesheet">
+    <script src="../../js/variant.js?1738639343"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -94,7 +94,7 @@
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/habox-over-greatwall/index.html" title="Ha盒子配置科学上网 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/free-remote-control/index.html" title="远程控制Homeassistant盒子 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/hacs-china/index.html" title="Homeassistant盒子安装HACS极速版 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -121,35 +121,35 @@
 <p>因此，从今天开始这个初始化过程将由买家（也许就是您）自己完成！实际上，这是一个有趣的过程……</p></blockquote>
 <p>有的朋友拿到盒子后插上电源连上网线就着急访问http://homeassistant.local:8123，但是盒子还没启动，页面打不开，然后就怀疑盒子有问题找到我，那也我不能不管啊，所以又一通询问一通解释。比较耗费时间精力。</p>
 <p>因此，朋友们拿到盒子后，首先接通电源插上网线等3分钟后再访问http://homeassistant.local:8123。</p>
-<p><a href="#R-image-14dd07732be4770d42c6724872edecd8" class="lightbox-link"><img alt="截图 2025-02-03 20-12-12" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203212446045.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-14dd07732be4770d42c6724872edecd8"><img alt="截图 2025-02-03 20-12-12" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203212446045.png"></a></p>
+<p><a href="#R-image-d81372ba3af4a369a4b4608e50d43359" class="lightbox-link"><img alt="截图 2025-02-03 20-12-12" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203212446045.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d81372ba3af4a369a4b4608e50d43359"><img alt="截图 2025-02-03 20-12-12" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203212446045.png"></a></p>
 <h3 id="有问题">有问题？</h3>
 <p>如果访问不了，出现拒绝连接之类的，应该是还没启动完成或者是别的什么问题。此时，可以试试http://homeassistant.local:8124，这是冬瓜伴侣辅助管理页面，通常这个服务会先于其他服务启动。也可以访问http://homeassistant.local:7681试试（这是命令行窗口，基本上等同于接上了显示器后看到的效果）</p>
 <p>如果冬瓜伴侣也访问不了，基本上可以判断是网络问题。访问http://homeassistant.local:8124的设备和homeassistant盒子是否连到了同一网络？当然还有一种情况是网线有问题，我们也遇到过这种情况；还有就是把盒子接到光猫的IPTV端口上去了（有的朋友用的是运营商送的光猫和路由器合体的设备）</p>
 <p>还有一种情况是路由器不支持homeassistant.local这种方式访问，不用着急，我们可以直接用ip访问。可以在路由器后台找找设备连接中名称为homeassistant的设备，看看ip地址是什么。如果都找不到homeassistant的设备，那又是上面说的网络问题，继续排查吧。</p>
-<p><a href="#R-image-56e4d4cbdd304d2f1a035df8540cd716" class="lightbox-link"><img alt="截图 2025-02-03 20-16-02" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201615169.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-56e4d4cbdd304d2f1a035df8540cd716"><img alt="截图 2025-02-03 20-16-02" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201615169.png"></a></p>
-<p><a href="#R-image-ac6cb5327936d2734704295f5a433554" class="lightbox-link"><img alt="截图 2025-02-03 20-20-09" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203202041766.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ac6cb5327936d2734704295f5a433554"><img alt="截图 2025-02-03 20-20-09" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203202041766.png"></a></p>
+<p><a href="#R-image-b3f699afcca67ef0e55bf1f623347614" class="lightbox-link"><img alt="截图 2025-02-03 20-16-02" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201615169.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b3f699afcca67ef0e55bf1f623347614"><img alt="截图 2025-02-03 20-16-02" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201615169.png"></a></p>
+<p><a href="#R-image-385b6d15bbd956f86503650f42a4370c" class="lightbox-link"><img alt="截图 2025-02-03 20-20-09" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203202041766.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-385b6d15bbd956f86503650f42a4370c"><img alt="截图 2025-02-03 20-20-09" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203202041766.png"></a></p>
 <h3 id="初始化过程">初始化过程</h3>
 <p>通常情况在等待初始化过程时，我会打开http://homeassistant.local:7681监测进度。</p>
 <p>出现&quot;&gt;&ldquo;提示符后输入login回车，然后在&rdquo;#&ldquo;提示符下输入ha-install -t 回车就可以监测初始化进度了。</p>
 <p>但是这个过程会刷新页面，所以会退到&rdquo;&gt;&ldquo;提示符，需要再次做上面的操作</p>
 <p>当然，也可以访问冬瓜伴侣（http://homeassistant.local:8124）来监测整个过程，这会更直观一些，并且不会出现需要上面提到的刷新页面后需要重新输入login再输入ha-install -t的操作。</p>
-<p><a href="#R-image-6ffc80f18a543019c5bc354e247c0858" class="lightbox-link"><img alt="截图 2025-02-03 20-06-37" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201306903.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6ffc80f18a543019c5bc354e247c0858"><img alt="截图 2025-02-03 20-06-37" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201306903.png"></a></p>
-<p><a href="#R-image-14dad5f8685b9ce920ae6649cc1f3d20" class="lightbox-link"><img alt="截图 2025-02-03 20-11-45" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201306955.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-14dad5f8685b9ce920ae6649cc1f3d20"><img alt="截图 2025-02-03 20-11-45" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201306955.png"></a></p>
-<p><a href="#R-image-46664ffea414b90aee889c4889d84fad" class="lightbox-link"><img alt="截图 2025-02-03 20-25-34" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203213333471.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-46664ffea414b90aee889c4889d84fad"><img alt="截图 2025-02-03 20-25-34" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203213333471.png"></a></p>
-<p><a href="#R-image-2af4085ce5c433f8edda102789f7be67" class="lightbox-link"><img alt="截图 2025-02-03 20-12-21" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201750237.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2af4085ce5c433f8edda102789f7be67"><img alt="截图 2025-02-03 20-12-21" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201750237.png"></a></p>
-<p><a href="#R-image-f4317c0c29dba3951c8eca6a58862d11" class="lightbox-link"><img alt="截图 2025-02-03 20-25-49" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203202724617.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f4317c0c29dba3951c8eca6a58862d11"><img alt="截图 2025-02-03 20-25-49" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203202724617.png"></a></p>
+<p><a href="#R-image-e82492f7dbf78499a09d4e1a8248a41c" class="lightbox-link"><img alt="截图 2025-02-03 20-06-37" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201306903.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e82492f7dbf78499a09d4e1a8248a41c"><img alt="截图 2025-02-03 20-06-37" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201306903.png"></a></p>
+<p><a href="#R-image-359b8a6e0724161fd813d72ea37bd7ff" class="lightbox-link"><img alt="截图 2025-02-03 20-11-45" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201306955.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-359b8a6e0724161fd813d72ea37bd7ff"><img alt="截图 2025-02-03 20-11-45" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201306955.png"></a></p>
+<p><a href="#R-image-4ae84247e56e398d40ea838df95e36f1" class="lightbox-link"><img alt="截图 2025-02-03 20-25-34" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203213333471.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4ae84247e56e398d40ea838df95e36f1"><img alt="截图 2025-02-03 20-25-34" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203213333471.png"></a></p>
+<p><a href="#R-image-2493359d201d9249e7821bc23ccf256c" class="lightbox-link"><img alt="截图 2025-02-03 20-12-21" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201750237.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2493359d201d9249e7821bc23ccf256c"><img alt="截图 2025-02-03 20-12-21" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201750237.png"></a></p>
+<p><a href="#R-image-904b3e1967b3a377626e18700ec8adb4" class="lightbox-link"><img alt="截图 2025-02-03 20-25-49" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203202724617.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-904b3e1967b3a377626e18700ec8adb4"><img alt="截图 2025-02-03 20-25-49" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203202724617.png"></a></p>
 <h3 id="开始使用">开始使用</h3>
 <p>实际上在初始化后期这个页面就可以访问了，但是由于初始化未完成，中途由于因初始化系统自动重启会导致连接失败，如果您不了解这个，您会惊讶：什么破盒子，系统有问题吧，怎么又连接中断访问不了了？不行，我得联系卖家问问什么情况。如此这般</p>
-<p><a href="#R-image-d521c885d8f6ed2df6ae37230c04660f" class="lightbox-link"><img alt="截图 2025-02-03 20-18-41" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201857569.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d521c885d8f6ed2df6ae37230c04660f"><img alt="截图 2025-02-03 20-18-41" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201857569.png"></a></p>
+<p><a href="#R-image-9efa55775facd38922638e0279a8ebb5" class="lightbox-link"><img alt="截图 2025-02-03 20-18-41" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250203201857569.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9efa55775facd38922638e0279a8ebb5"><img alt="截图 2025-02-03 20-18-41" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250203201857569.png"></a></p>
 <p><a href="../../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）</a></p>
 
 <script
@@ -183,9 +183,9 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1738589994" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1738589994" defer></script>
-    <script src="../../js/theme.js?1738589994" defer></script>
+    <script src="../../js/clipboard.min.js?1738639343" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1738639343" defer></script>
+    <script src="../../js/theme.js?1738639343" defer></script>
 
 
   </body>
