--- a/public/installation/instructions/index.html
+++ b/public/installation/instructions/index.html
@@ -35,17 +35,17 @@
     <link href="../../installation/instructions/index.xml" rel="alternate" type="application/rss+xml" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站">
     <link href="../../installation/instructions/index.print.html" rel="alternate" type="text/html" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1738589994" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1738589994" rel="stylesheet">
-    <link href="../../css/fonts.css?1738589994" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1738589994" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1738589994" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1738589994" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1738589994" rel="stylesheet">
-    <link href="../../css/print.css?1738589994" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1738589994"></script>
+    <link href="../../css/fontawesome-all.min.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1738639342" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1738639342" rel="stylesheet">
+    <link href="../../css/fonts.css?1738639342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1738639342" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1738639342" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1738639342" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1738639342" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1738639342" rel="stylesheet">
+    <link href="../../css/print.css?1738639342" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1738639342"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -143,38 +143,38 @@
 <p>首先，感谢您选择由“HABox智能家居盒子”提供的Home assistant智能家居盒子，下面请与我一起进入这个神秘的小盒子一探究竟。</p>
 <h2 id="等待欢迎界面">等待欢迎界面</h2>
 <p>拿到盒子后，连上网线，插上电源，开机……启动并加载完成，大概要等待2分半种。然后在浏览器地址栏输入<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123</a> 进行访问，不出所料，您将看到如下欢迎界面。（你也可以在路由器后台查看具体ip地址，然后输入<a href="http://ip:8123/" rel="external" target="_self">http://ip:8123</a>进行访问）</p>
-<p><a href="#R-image-f9d3592397bfdb4bcd7a5983eca6a9c6" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9d3592397bfdb4bcd7a5983eca6a9c6"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
+<p><a href="#R-image-4b6adb5c211a3a05916894ce4d5acd6c" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4b6adb5c211a3a05916894ce4d5acd6c"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
 <h2 id="基本设置">基本设置</h2>
 <h3 id="创建用户">创建用户</h3>
-<p><a href="#R-image-d3a7f99c2ce2bc285dc280f3eae80893" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d3a7f99c2ce2bc285dc280f3eae80893"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
+<p><a href="#R-image-6c89647d78578910026da4a56e38f614" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6c89647d78578910026da4a56e38f614"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
 <h3 id="选择家的位置">选择家的位置</h3>
 <p>这个地方如果搜索不到，您可以通过缩放地图，拖动地图中的位置图标到家所在的位置，然后是设置国家选项（如果是通过搜索找到的位置，就没有这个选项，系统自动设置了）</p>
-<p><a href="#R-image-90ab4615b8127a3d41a5bd16453d8c84" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-90ab4615b8127a3d41a5bd16453d8c84"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
-<p><a href="#R-image-f93c8efad0b579fa025af3ef223520bc" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f93c8efad0b579fa025af3ef223520bc"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
+<p><a href="#R-image-c29cff3b6bc156e9c58ab40b55b45a1c" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c29cff3b6bc156e9c58ab40b55b45a1c"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
+<p><a href="#R-image-c076af3b5581d966f673a8f1a3d7f73b" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c076af3b5581d966f673a8f1a3d7f73b"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
 <h3 id="信息收集">信息收集</h3>
 <p>接下来是收集数据，建议不选，然后是自动发现家里的智能设备，直接点完成即可。</p>
-<p><a href="#R-image-4127f2e732fa95a3596cf6036d2aee96" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4127f2e732fa95a3596cf6036d2aee96"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
-<p><a href="#R-image-e8dfac48b56ef5b5612be89d5a2b354e" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e8dfac48b56ef5b5612be89d5a2b354e"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
+<p><a href="#R-image-a2d567411c69b6537832f75865125105" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a2d567411c69b6537832f75865125105"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
+<p><a href="#R-image-2e2f51c38672338a1ddd84e34a3f0d33" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2e2f51c38672338a1ddd84e34a3f0d33"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
 <h3 id="正式进入后台">正式进入后台</h3>
-<p><a href="#R-image-d74e94c9acf3d65386e95071ea0c0385" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d74e94c9acf3d65386e95071ea0c0385"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
+<p><a href="#R-image-cf99ac56e4ff06835bd48bbcb58c4ba8" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf99ac56e4ff06835bd48bbcb58c4ba8"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
 <h3 id="升级和修复">升级和修复</h3>
 <p>您可能会发现左侧配置选项边上有如上图所示的数字提示，点进去</p>
 <p>该升级升级，该修复修复</p>
-<p><a href="#R-image-075148cd3e5032e17cbf4aebcfb32a37" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-075148cd3e5032e17cbf4aebcfb32a37"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
-<p><a href="#R-image-4d4dbbbb97ebec23ef64ea2b66dd2b88" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4d4dbbbb97ebec23ef64ea2b66dd2b88"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
-<p><a href="#R-image-0684f05fdd17941e125666207e0ff757" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0684f05fdd17941e125666207e0ff757"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
-<p><a href="#R-image-3561f452f4cc3f08ee6b1f60bea4ca9d" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3561f452f4cc3f08ee6b1f60bea4ca9d"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
+<p><a href="#R-image-f1171848cb775663eecaec5217bb9eae" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f1171848cb775663eecaec5217bb9eae"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
+<p><a href="#R-image-c59a9518215e1b74ddf89e69c5ab6afb" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c59a9518215e1b74ddf89e69c5ab6afb"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
+<p><a href="#R-image-d3378967e0d48c396a3ea46f84e696ad" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d3378967e0d48c396a3ea46f84e696ad"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
+<p><a href="#R-image-711c04601e364c4582ab9ddf412e8311" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-711c04601e364c4582ab9ddf412e8311"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
 <h3 id="结束语">结束语</h3>
 <p>到此，您基本上就可以根据自身情况进行设备的接入和控制了，请持续关注我们，我们将持续发布使用HomeAssistant盒子相关的使用说明！</p>
 
@@ -272,13 +272,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1738589994" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1738589994" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1738589994" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1738589994" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1738589994" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1738589994" defer></script>
-        <script src="../../js/search.js?1738589994" defer></script>
+        <script src="../../js/auto-complete.js?1738639343" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1738639343" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1738639343" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1738639343" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1738639343" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1738639343" defer></script>
+        <script src="../../js/search.js?1738639343" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -292,6 +292,7 @@
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/habox-over-greatwall/index.html" class=""><a class="padding" href="../../installation/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/initialize-system/index.html" class=""><a class="padding" href="../../installation/initialize-system/index.html">homeassistant初始化系统<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/hacs-china/index.html" class=""><a class="padding" href="../../installation/hacs-china/index.html">Homeassistant盒子安装HACS极速版<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/free-remote-control/index.html" class=""><a class="padding" href="../../installation/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -376,9 +377,9 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1738589994" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1738589994" defer></script>
-    <script src="../../js/theme.js?1738589994" defer></script>
+    <script src="../../js/clipboard.min.js?1738639343" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1738639343" defer></script>
+    <script src="../../js/theme.js?1738639343" defer></script>
 
 
   </body>
